# pi3-ws23-ueb-pablo

./: .gitignore  README.md  stack.yaml
extra_isec/: isec23-ueb05.md  ueb02.cabal
extra_isec/src/: Enigma.hs
ueb00/: ueb00.cabal
ueb00/src/: SumISq.hs
ueb00/test/: UnitTest.hs
ueb01/: BEWERTUNG.md  ueb01.cabal
ueb01/src/: PrimeTwins.hs  TextFrame.hs
ueb01/test/: UnitTest.hs
ueb02/: BEWERTUNG.md
ueb02/src/: Enigma.hs
ueb02/test/: UnitTest.hs
ueb03/: BEWERTUNG.md  ueb03.cabal
ueb03/src/: Goldbach.hs  ListUtils.hs
ueb03/test/: UnitTest.hs
ueb04/: BEWERTUNG.md  ueb04.cabal
ueb04/src/: TextToolbox.hs
ueb04/test/: UnitTest.hs
ueb05/: BEWERTUNG.md  ueb05.cabal
ueb05/src/: Shopkeeping.hs
ueb05/test/: UnitTest.hs
ueb06/: BEWERTUNG.md  ueb06.cabal
ueb06/src/: Analysis.hs
ueb06/test/: UnitTest.hs
ueb07/: .gitignore  gruppe.txt  ueb07.cabal
ueb07/src/: Family.hs  VarTree.hs
ueb07/test/: UnitTest.hs
ueb08/: puzzle_game.bat  ueb08.cabal
ueb08/fields/: field0.field  field1.field  field2.field  field3.field  field4.field
ueb08/src/: Main.hs  PuzzleGame.hs
ueb08/test/: UnitTest.hs
