name:                ueb08
version:             1.2
build-type:          Simple
cabal-version:       2.0

executable PuzzleGame
  hs-source-dirs:    src
  main-is:           Main.hs
  other-modules:     PuzzleGame
  build-depends:     base, containers, random, haskeline, directory
  default-language:  Haskell2010

-- Unit test suite
test-suite unit
  ghc-options:    -main-is UnitTest
  type:           exitcode-stdio-1.0
  hs-source-dirs: test,src
  other-modules:  PuzzleGame, Main
  main-is:        UnitTest.hs
  build-depends:  base, tasty, tasty-hunit, containers, random, haskeline, directory
